--- a/login.css
+++ b/login.css
@@ -22,7 +22,9 @@ body {
     padding-right: 3rem;
     padding-top: 3rem;
     padding-bottom: 4rem;
-  }
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
   
   h2 {
     text-align: center;
@@ -31,6 +33,18 @@ body {
   .input-group {
   margin-bottom: 30px;
   width: 300px; 
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
 }
 
 button {
@@ -43,4 +57,8 @@ button {
   background-color: wheat;
   cursor: pointer;
   font-size: 1rem;
+}
+
+button:hover {
+  background-color: #f5d491;
 }
