--- a/login.css
+++ b/login.css
@@ -1,65 +1,109 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap");
-* {
-  font-family: "Poppins", sans-serif;
-  font-weight: 500;
-  text-decoration: none;
-  color: black;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins',sans-serif;
 }
-
-body {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: beige;
-  }
-  
-  .login-container {
-    background-color: beige;
-    padding-left: 4rem;
-    padding-right: 3rem;
-    padding-top: 3rem;
-    padding-bottom: 4rem;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+body{
+  background: #1abc9c;
+  overflow: hidden;
 }
-  
-  h2 {
-    text-align: center;
-  }
-  
-  .input-group {
-  margin-bottom: 30px;
-  margin-right: 15px;
-  width: 300px; 
+::selection{
+  background: rgba(26,188,156,0.3);
 }
-
-label {
-  display: block;
-  margin-bottom: 5px;
+.container{
+  max-width: 440px;
+  padding: 0 20px;
+  margin: 170px auto;
 }
-
-input {
+.wrapper{
   width: 100%;
-  padding: 10px;
+  background: #fff;
+  border-radius: 5px;
+  box-shadow: 0px 4px 10px 1px rgba(0,0,0,0.1);
+}
+.wrapper .title{
+  height: 90px;
+  background: #16a085;
+  border-radius: 5px 5px 0 0;
+  color: #fff;
+  font-size: 30px;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.wrapper form{
+  padding: 30px 25px 25px 25px;
+}
+.wrapper form .row{
+  height: 45px;
   margin-bottom: 15px;
-  margin-right: 40px;
-  border: 1px solid #ccc;
-  border-radius: 3px;
+  position: relative;
 }
-
-button {
-  width: 95%;
-  padding: 10px;
-  border: none;
-  border-radius: 10px;
-  background-color: wheat;
+.wrapper form .row input{
+  height: 100%;
+  width: 100%;
+  outline: none;
+  padding-left: 60px;
+  border-radius: 5px;
+  border: 1px solid lightgrey;
+  font-size: 16px;
+  transition: all 0.3s ease;
+}
+form .row input:focus{
+  border-color: #16a085;
+  box-shadow: inset 0px 0px 2px 2px rgba(26,188,156,0.25);
+}
+form .row input::placeholder{
+  color: #999;
+}
+.wrapper form .row i{
+  position: absolute;
+  width: 47px;
+  height: 100%;
+  color: #fff;
+  font-size: 18px;
+  background: #16a085;
+  border: 1px solid #16a085;
+  border-radius: 5px 0 0 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.wrapper form .pass{
+  margin: -8px 0 20px 0;
+}
+.wrapper form .pass a{
+  color: #16a085;
+  font-size: 17px;
+  text-decoration: none;
+}
+.wrapper form .pass a:hover{
+  text-decoration: underline;
+}
+.wrapper form .button input{
+  color: #fff;
+  font-size: 20px;
+  font-weight: 500;
+  padding-left: 0px;
+  background: #16a085;
+  border: 1px solid #16a085;
   cursor: pointer;
-  font-size: 1rem;
 }
-
-button:hover {
-  background-color: #f5d491;
+form .button input:hover{
+  background: #12876f;
+}
+.wrapper form .signup-link{
+  text-align: center;
+  margin-top: 20px;
+  font-size: 17px;
+}
+.wrapper form .signup-link a{
+  color: #16a085;
+  text-decoration: none;
+}
+form .signup-link a:hover{
+  text-decoration: underline;
 }
