--- a/user.css
+++ b/user.css
@@ -58,3 +58,15 @@ body {
     display: block;
 }
 
+footer {
+    background-color: #073B3A;
+    width: 100%;
+    text-align: center;
+    color: #E7F6F2;
+    padding: 10px;
+    bottom: 0;
+    border-top-left-radius: 40px; /* Rounded on top left */
+    border-top-right-radius: 40px; /* Rounded on top right */
+    height: 20px; /* Adjust the height as needed */
+    font-family: 'Arial', sans-serif;
+  }
