--- a/user.css
+++ b/user.css
@@ -1,7 +1,8 @@
 body {
     margin: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
+
 
 .navbar {
     background-color: #073B3A;
@@ -12,6 +13,14 @@ body {
     justify-content: space-between;
     align-items: center;
 }
+
+.title{
+    margin-top: 15px;
+    font-size: 32px;
+    font-weight: bold;
+    text-align: center;
+}
+
 
 .user-title {
 
