--- a/admin.css
+++ b/admin.css
@@ -72,6 +72,7 @@ body {
     border-radius: 20px 20px 0 0; 
     height: 40px; 
     font-family: 'Poppins', sans-serif;
-    font-size: medium;
+    font-size: 15px;
+    justify-content: center;
   }
 
